<resources>
    <string name="app_name">FuelFull: Paliwo i koszty!</string>
    <string name="dodaj_tankowanie_title">Dodaj tankowanie:</string>
    <string name="tankowanie">tankowanie</string>
    <string name="date_placeholder">Date placeholder</string>
    <string name="hardcoded_zatankowano">zatankowano:</string>
    <string name="hardcoded_zaplacono">Zapłacono:</string>
    <string name="hardcoded_spalanie">Spalanie:</string>
    <string name="hardcoded_przejechano">przejechano:</string>
    <string name="placeholder_zatankowano">36.6L</string>
    <string name="placeholder_zaplacono">172.54 ZŁ</string>
    <string name="placeholder_przejechano">456.6 KM</string>
    <string name="placeholder_spalanie">7.8L/100</string>
    <string name="hardcoded_zatankowano_litrow">Zatankowano litrów:</string>
    <string name="cena_za_litr">Cena za litr:</string>
    <string name="przejechano_pupup">Przejechano:</string>
    <string name="hint_zatankowano">np.: 36.6L</string>
    <string name="hint_zaplacono">np.: 4.97 ZŁ</string>
    <string name="hint_przejechano">np.: 456.7 KM</string>
    <string name="Ok_btn">OK</string>
    <string name="anuluj_btn">ANULUJ</string>
    <string name="marka_model">Ford Fiesta </string>
    <string name="rocznik">2005</string>
    <string name="przebieg">Przebieg:</string>
    <string name="przebiegVal">270 489</string>
    <string name="open_navigation_drawer">Otwórz boczny pasek menu</string>
    <string name="close_navigation_drawer">Zamknij boczny pasek menu</string>
    <string name="dodajNapraweTitle">Dodaj naprawę:</string>
    <string name="zaplaconoNaprawa">Zapłacono:</string>
    <string name="naprawiono">Naprawiono:</string>
    <string name="naprawaValue">np.: 452.72ZŁ</string>
    <string name="wykonaneNaprawy">Wpisz wykonane naprawy! \n np.: Szczęki, klocki, tarcze,
    itd.</string>
    <string name="dodajPrzypomnienieTitle">Dodaj przypomnienie:</string>
    <string name="tytulPrzypomnienie">Tytuł:</string>
    <string name="trescPrzypomnienia">Treść przypomnienia:</string>
    <string name="tytulValue">np.: Przegląd</string>
    <string name="trescValue">Dodaj treść przypomnienia! \n np.: Pamiętaj! Badanie techniczne za
        tydzień!</string>
    <string name="kiedyPrzypomnienie">Kiedy?</string>
    <string name="welcomeScreen">Witaj w aplikacji FuelFull!</string>
    <string name="welcomeScreenDesc">Chcesz monitorować wydatki związane ze swoim samochodem? Dobrze trafiłeś! Dzięki naszej aplikacji sprawdzisz
        w którym kierunku uciekają pieniądze włożone w jego utrzymanie!</string>
    <string name="fuelScreen">Paliwo?!</string>
    <string name="fuelScreenDesc">Myślisz, że pustka w Twoim portfelu jest spowodowana właśnie paliwem? Sprawdzimy to! A przy okazji przeliczmy średnie spalanie!</string>
    <string name="repairScreen">Części?!</string>
    <string name="repairScreenDesc">Twój samochód to gruchot, czy może nowy mercedes? Nie ważne! Każdy eksploatowany samochód w końcu musi mieć wymieniony choćby olej!
         Przy wymianie części, dodaj to do naszej aplikacji, a nigdy nie będziesz mieć wątpliwości kiedy naprawa została wykonana!</string>
    <string name="notificationScreen">Przegląd?!</string>
    <string name="notificationScreenDesc">Kurczę! Przegląd do dziś?! Kompletnie zapomniałem! Dzięki nam już nigdy nie zapomnisz, o przeglądzie, OC, czy innych sprawach
     które powinny być przez Ciebie pamiętane! Będziemy pamiętać za Ciebie i przypomnimy w razie konieczności!</string>
    <string name="Dodaj_samochod">Dodaj swój samochód!</string>
    <string name="hardcoded_marka">Marka:</string>
    <string name="hardcoded_model">Model:</string>
    <string name="hardcoded_rocznik">Rocznik:</string>
    <string name="hint_marka">np.: Ford</string>
    <string name="hint_model">np.: Fiesta</string>
    <string name="hint_rocznik">np.: 2005</string>
    <string name="Naprawa_card_title">naprawa</string>
    <string name="przypomnienie_notataka">Notatka:</string>
    <string name="przypomnienie_notatka_value">Umyć samochód i pojechać na przegląd!!</string>
</resources>