<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tankowanie_popup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_local_gas_station_black_24dp"
        android:drawableTint="@color/fabColor1"
        android:text="@string/dodaj_tankowanie_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Zatankowano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/hardcoded_zatankowano_litrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tankowanie_popup_title" />

    <TextView
        android:id="@+id/CenaL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/cena_za_litr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Zatankowano" />

    <TextView
        android:id="@+id/PrzejechanoT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/przejechano_pupup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CenaL" />

    <EditText
        android:id="@+id/ZatankowanioVALUE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/hint_zatankowano"
        android:background="@android:color/transparent"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Zatankowano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <EditText
        android:id="@+id/CenaLValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/hint_zaplacono"
        android:background="@android:color/transparent"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/CenaL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <EditText
        android:id="@+id/PrzejechanoTValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/hint_przejechano"
        android:background="@android:color/transparent"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/PrzejechanoT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="183dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PrzejechanoTValue" />

    <Button
        android:id="@+id/tankowanie_ok_btn"
        style="@style/Base.Widget.AppCompat.Button.Small.Bordeless"
        android:layout_width="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:text="@string/Ok_btn"
        android:textColor="@color/positiveBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/tankowanie_cancel_btn"
        style="@style/Base.Widget.AppCompat.Button.Small.Bordeless"
        android:layout_width="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:text="@string/anuluj_btn"
        android:textColor="@color/negativeBTN"
        app:layout_constraintBaseline_toBaselineOf="@+id/tankowanie_ok_btn"
        app:layout_constraintEnd_toStartOf="@+id/tankowanie_ok_btn" />


</android.support.constraint.ConstraintLayout>