<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_Layout_przypomnienie"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/przypomnienie_popup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_notification"
        android:drawableTint="@color/fabColor3"
        android:text="@string/dodajPrzypomnienieTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Tytuł"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tytulPrzypomnienie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/przypomnienie_popup_title" />

    <TextView
        android:id="@+id/Tresc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/trescPrzypomnienia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tytuł" />

    <EditText
        android:id="@+id/TytulValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/tytulValue"
        android:inputType="textAutoCorrect"
        android:background="@android:color/transparent"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Tytuł"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="183dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TrescValue" />

    <Button
        android:id="@+id/tankowanie_ok_btn"
        style="@style/Base.Widget.AppCompat.Button.Small.Bordeless"
        android:layout_width="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:text="@string/Ok_btn"
        android:textColor="@color/positiveBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/tankowanie_cancel_btn"
        style="@style/Base.Widget.AppCompat.Button.Small.Bordeless"
        android:layout_width="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:text="@string/anuluj_btn"
        android:textColor="@color/negativeBTN"
        app:layout_constraintBaseline_toBaselineOf="@+id/tankowanie_ok_btn"
        app:layout_constraintEnd_toStartOf="@+id/tankowanie_ok_btn" />

    <MultiAutoCompleteTextView
        android:id="@+id/TrescValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:hint="@string/trescValue"
        android:textSize="14sp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tresc" />

    <TextView
        android:id="@+id/Kiedy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/kiedyPrzypomnienie"
        app:layout_constraintBaseline_toBaselineOf="@+id/KiedyV"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/KiedyV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="12.06.2019"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tankowanie_cancel_btn"
        app:layout_constraintStart_toEndOf="@+id/Kiedy" />


</android.support.constraint.ConstraintLayout>